--- a/02/ex2-21.html
+++ b/02/ex2-21.html
@@ -10,6 +10,7 @@
         p {color: brown;}
         .ps {font:bold 13px/1.3 "맑은 고딕", 'Malgun Gothic', Helvetica; color:black;}
         /* 궁서, 굴림, 돋움, 바탕 +맑은 고딕(apple gothic) */
+        /* ttf, otf, woff,woff2, (eot) */
     </style>
 </head>
 <body>
