--- a/03/250527/calendar.html
+++ b/03/250527/calendar.html
@@ -23,10 +23,13 @@
         tr > *:nth-child(7) {color: blue;}
     </style>
     <script>
-        function drawCalander(){
+        function drawCalendar(){
             const date = new Date(); // 날짜 객체 생성. 현재의 날짜
+            date.setMonth(3);
+
             const year = date.getFullYear(); // date 4자리 년도 값을 가져온다
-            const month = date.getMonth();; //월 값을 가져온다
+            const month = date.getMonth(); //월 값을 가져온다
+
 
             const allMonths = [31,28,31,30,31,30,31,31,30,31,30,31]; // 월의 마지막 날 세팅
             const lastDate = allMonths[month];
@@ -36,13 +39,13 @@
 
             date.setDate(1);  //현재의 일을 1일로 수정
             const firstDay = date.getDay(); //1일의 요일 정보를 가져온다
-            Number(firstDay);
+        
 
 
             let str = "<tr>";
-            for(let i = (1 - firstDay)  ; i <= 35; i++){
+            for(let i = (1 - firstDay) ; i <= lastDate; i++){
                 str += `<td>${i <= 31 && i>0 ? i : ''}</td>`;
-                if(i % 7 == Number(firstDay)-1){
+                if((i+firstDay) % 7 == 0){
                     str += "</tr><tr>"
                 }
             }
@@ -51,7 +54,7 @@
         }
 
         window.onload = function(){
-            drawCalander();
+           drawCalendar();
         }
     </script>
 </head>
